<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_live_tv"
            android:id="@+id/nav_now_playing"
            android:title="@string/nav_now_playing" />
        <item
            android:icon="@drawable/ic_event_note"
            android:id="@+id/nav_upcoming"
            android:title="@string/nav_upcoming" />
        <item
            android:icon="@drawable/ic_favorite"
            android:id="@+id/nav_favorite"
            android:title="@string/nav_favorite" />
    </group>

    <item android:title="@string/nav_other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_about_me" />
        </menu>
    </item>

</menu>
